# ausoundtouch

./: .gitignore  DEVELOP.md  Makefile  README.md  check-dependencies.sh  create-dmg.sh  dmg-background.txt
AUSoundTouch/: CMakeLists.txt  DEVELOP.md
AUSoundTouch/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SoundTouchWrapper.cpp  SoundTouchWrapper.h
AUSoundTouch/Tests/Functional/: Main.cpp  PitchShiftValidationTest.cpp  PluginValidationTests.cpp
AUSoundTouch/Tests/Unit/: AudioProcessorTests.cpp  Main.cpp  ParameterConversionTests.cpp  ParameterFormattingTests.cpp  SoundTouchWrapperTests.cpp
